--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
 fastapi
 uvicorn
 pandas
@@ -8,3 +9,9 @@ requests
 streamlit
 plotly
 prometheus_client
+psutil
+gputil
+sqlalchemy
+apscheduler
+xgboost
+torch
